# mcp-keap

./: .coveragerc  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_integration_tests.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  coverage-badge.yml.disabled  load-test.yml  pre-commit.yml  security.yml  security.yml.disabled
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  SCHEMA_DOCUMENTATION.md
scripts/: coverage-monitor.py  run_tests.py  setup.py  test-ci-local.sh
scripts/examples/: advanced_filter_examples.py  check_keap_api.py  check_server.py  simple_test.py  test_api.py  validate_keap_api.py
src/: __init__.py
src/api/: __init__.py  client.py
src/cache/: __init__.py  manager.py  persistent_manager.py
src/mcp/: __init__.py  contact_tools.py  server.py  tag_tools.py  tools.py
src/mcp/optimization/: __init__.py  api_optimization.py  optimization.py
src/schemas/: __init__.py  definitions.py  validation.py  validator.py
src/services/: __init__.py  api.py  cache.py  container.py  query.py  transformation.py  validation.py
src/utils/: __init__.py  config.py  contact_utils.py  filter_utils.py  filters.py  health_check.py  logging_utils.py  security.py
tests/: README.md  conftest.py
tests/integration/: test_50_percent_coverage_boost.py  test_additional_coverage_boost.py  test_advanced_coverage_integration.py  test_api_cache_integration.py  test_cache_integration.py  test_complete_workflow.py  test_comprehensive_integration.py  test_contact_tag_integration.py  test_coverage_boost_simple.py  test_direct_coverage_boost.py  test_final_coverage_integration.py  test_final_coverage_push.py  test_final_push_integration.py  test_focused_core_integration.py  test_focused_integration.py  test_high_impact_integration.py  test_max_coverage_integration.py  test_maximum_coverage_integration.py  test_mcp_server_complete_integration.py  test_mcp_server_integration.py  test_mcp_tools_integration.py  test_optimization_integration.py  test_restore_coverage.py  test_targeted_coverage_boost.py  test_ultimate_coverage_integration.py  test_working_integration.py
tests/unit/: test_advanced_filter_utils.py  test_api_client.py  test_contact_tools.py  test_contact_utils.py  test_filter_utils.py  test_filter_utils_advanced.py  test_mcp_server.py  test_mcp_tools.py  test_mcp_tools_advanced.py  test_optimization.py  test_optimization_advanced.py  test_persistent_cache.py  test_persistent_cache_advanced.py  test_schemas.py  test_tag_tools.py
